namespaces/live-1.cloud-platform.service.justice.gov.uk/hmpps-manage-supervisions-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-manage-supervisions-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation-end-to-end-tech"
    cloud-platform.justice.gov.uk/application: "HMPPS Manage Supervisions"
    cloud-platform.justice.gov.uk/owner: "Probation End to End: steel-thread@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-manage-supervisions"
    cloud-platform.justice.gov.uk/team-name: "hmpps-probation-end-to-end"
    cloud-platform.justice.gov.uk/review-after: ""
